--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,6 @@
 <%= bootstrap_form_for(@user) do |f| %>
   <%= f.email_field :email %>
   <%= f.password_field :password %>
-  <%= f.password_confirmation :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
   <%= f.submit %>
 <% end %>
