--- a/app/views/comments/create.html.erb
+++ b/app/views/comments/create.html.erb
@@ -1,2 +1,15 @@
-<h1>Comments#create</h1>
-<p>Find me in app/views/comments/create.html.erb</p>
+<h3>Post a Comment</h3>
+
+<%= form_for [ @version, @comment ] do |f| %>
+  <p>
+    <%= f.label :user_name %><br/>
+    <%= f.text_field :user_name %>
+  </p>
+  <p>
+    <%= f.label :body %><br/>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit 'Submit' %>
+  </p>
+<% end %>
