--- a/app/views/versions/edit.html.erb
+++ b/app/views/versions/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Versions#edit</h1>
-<p>Find me in app/views/versions/edit.html.erb</p>
+<h1>Versions Edit</h1>
+
+<form method="post">
+    <textarea></textarea>
+</form>
