--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><%=@user.name %>'s Profile</h1>
+<% if @user == current_user %>
+<%= link_to "Edit My Profile", edit_user_path(@user) %>
+<% end %>
+
+        <div id="profile-photo">
+            <% if @user.avatar_file_name %>
+                <%= image_tag @user.avatar_url(:medium) %><br /><br />
+            <% end %>
+        </div>
+
+        Email:<%= @user.email %>
