--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,92 @@
+<style type="text/css">
+    
+  body {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .fullscreen_bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-image: url('https://dnqgz544uhbo8.cloudfront.net/_/fp/img/logged-out-home/camping.vhSr1NbYxkuV0oTUO0-dIA.jpeg');
+  }
+  .form-signin {
+    max-width: 280px;
+    padding: 15px;
+    margin: 0 auto;
+  }
+  .form-signin .form-signin-heading, .form-signin {
+    margin-bottom: 10px;
+  }
+  .form-signin .form-control {
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  .form-signin .form-control:focus {
+    z-index: 2;
+  }
+  .form-signin input[type="text"] {
+    margin-bottom: -1px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-bottom-style: none;
+    border-left-style: solid;
+    border-color: #000;
+  }
+  .form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-top-style: none;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-color: #000;
+  }
+  .form-signin-heading {
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
+  }
+
+  .clearme{
+    background-color:  rgba(0, 0, 0, 0.1);
+  }
+
+</style>
+
+
+<div id="fullscreen_bg" class="fullscreen_bg"/>
+        <h1 class="form-signin-heading text-muted">Sign In</h1>
+
 <div class = "container">
     <div class="col-md-4"></div>
+    <div class = "clearme">
     <div class="well col-md-4">
-        <h1>Create a New User Account </h1>
             <%= bootstrap_form_for(@user) do |f| %>
-                <%= f.text_field :name, class: "form-control" %>
-                <%= f.email_field :email, class: "form-control" %>
+                <%= f.text_field :name, class: "form-control", placeholder: "Email address" %>
+                <%= f.email_field :email, class: "form-control", placeholder: "Email address" %>
                 <%= f.password_field :password, class: "form-control" %>
                 <%= f.password_field :password_confirmation, class: "form-control" %>
-                <%= f.submit "Submit", class: "btn btn-default" %>
+                <%= f.submit "Submit", class: "btn btn-lg btn-primary btn-block" %>
+                            </div>
+
             <% end %>
+    </div>
     </div>
     <div class="col-md-4"></div>
 </div>
+</div>
+
+
