--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,29 @@
 <h1><%=@user.name %>'s Profile</h1>
+Email: <%= @user.email %>
+<br>
 <% if @user == current_user %>
 <%= link_to "Edit My Profile", edit_user_path(@user) %>
 <% end %>
+<% if current_user != @user %>
+    <%= link_to "Add #{@user.name} as a Friend", user_friendships_path(:friend_id => @user), :method => :post %>
+<% end %>
 
-        <div id="profile-photo">
-            <% if @user.avatar_file_name %>
-                <%= image_tag @user.avatar_url(:medium) %><br /><br />
-            <% end %>
-        </div>
+<h2><%= @user.name %>'s Friends</h2>
+    <ul>
+    <% @user.user_friendships.each do |f| %>
+        <li>
+            
+            <%= link_to f.friend.name, user_path(f) %> (<%= link_to "remove friend", user_friendship_path(f), :method => :delete %>)
+        </li>
+    <% end %>
+    </ul>
 
-        Email:<%= @user.email %>
+<h2>Users That Have Friended <%= @user.name %></h2>
+
+<div id="profile-photo">
+    <% if @user.avatar_file_name %>
+        <%= image_tag @user.avatar_url(:medium) %><br /><br />
+    <% end %>
+</div>
+
+
