--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,19 @@
-<h1>Edit Your Profile</h1>
+<div class = "container">
+    <div class="col-md-4"></div>
+    <div class="well col-md-4">
+        <h1>Edit User Profile</h1>
+            <%= bootstrap_form_for(@user) do |f| %>
+                <%= f.text_field :name, class: "form-control" %>
+                <%= f.email_field :email, class: "form-control" %>
+                <%= f.password_field :password, class: "form-control" %>
+                <%= f.password_field :password_confirmation, class: "form-control" %>
+                <span class="title">Avatar: </span><%= f.file_field :avatar %>
+                <%= f.submit "Submit", class: "btn btn-success" %>
+
+            <% end %>
+    </div>
+    <div class="col-md-4"></div>
+</div>
+
 
 <%= render partial: 'users/form' %>
