--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
 <h1><%=@user.name %>'s Profile</h1>
+<div id="profile-photo">
+    <% if @user.avatar_file_name %>
+        <%= image_tag @user.avatar_url(:medium) %><br /><br />
+    <% end %>
+</div>
 Email: <%= @user.email %>
 <br>
 <% if @user == current_user %>
@@ -12,18 +17,17 @@ Email: <%= @user.email %>
     <ul>
     <% @user.user_friendships.each do |f| %>
         <li>
-            
-            <%= link_to f.friend.name, user_path(f) %> (<%= link_to "remove friend", user_friendship_path(f), :method => :delete %>)
+            <hr>
+            <% if f.friend.avatar_file_name %>
+                <%= img_tag f.friend.avatar_url(:thumb) %>
+            <% end %>
+            <%= link_to f.friend.name.titleize, user_path(f) %> (<%= link_to "remove friend", user_friendship_path(f), :method => :delete %>)
         </li>
     <% end %>
     </ul>
 
 <h2>Users That Have Friended <%= @user.name %></h2>
 
-<div id="profile-photo">
-    <% if @user.avatar_file_name %>
-        <%= image_tag @user.avatar_url(:medium) %><br /><br />
-    <% end %>
-</div>
+
 
 
