--- a/app/views/versions/new.html.erb
+++ b/app/views/versions/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Versions#new</h1>
-<p>Find me in app/views/versions/new.html.erb</p>
+<h1>Welcome to Creating a new Piece for Your Writing Project</h1>
+
+<p>Upload a word or pdf file here:</p>
+
+
+<p>Or Copy and Paste a file into here:</p>
+
+<textarea></textarea>
+
