--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> -->
-      <a class="navbar-brand" href="#">WriterShare</a>
+      <%= link_to "WriterShare", users_path, class: "navbar-brand" %>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -29,7 +29,7 @@
             <li><%= link_to "View My Profile", user_path(current_user) %></li>
             <li><%= link_to "Edit My Profile", edit_user_path(current_user) %></li>
             <li class="divider"></li>
-            <li><%= link_to "View My Friends", users_path %></a></li>
+            <li><%= link_to "View My Friends", users_path %></li>
             <li class="divider"></li>
             
           </ul>
