--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@ Email: <%= @user.email %>
 <% if @user == current_user %>
 <%= link_to "Edit My Profile", edit_user_path(@user) %>
 <% end %>
-<% if current_user != @user && @user.user_friendships == nil %>
+<% if current_user != @user %>
     <%= link_to "Add #{@user.name} as a Friend", user_friendships_path(:friend_id => @user), :method => :post %>
 <% end %>
 <br>
@@ -24,7 +24,7 @@ Email: <%= @user.email %>
             <% if f.friend.avatar_file_name %>
                 <%= image_tag f.friend.avatar_url(:thumb) %>
             <% end %>
-            <%= link_to f.friend.name.titleize, user_path(f) %> (<%= link_to "remove friend", user_friendship_path(f), :method => :delete %>)
+            <%= link_to f.friend.name.titleize, user_path(f.friend_id) %> (<%= link_to "remove friend", user_friendship_path(f), :method => :delete %>)
         </li>
     <% end %>
     </ul>
