adds the text editor to versions new page

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,7 +7,7 @@
                 <%= f.email_field :email, class: "form-control" %>
                 <%= f.password_field :password, class: "form-control" %>
                 <%= f.password_field :password_confirmation, class: "form-control" %>
-                <span class="title">Avatar: </span><%= f.file_field :avatar %>
+                <%= f.file_field :avatar %>
                 <%= f.submit "Submit", class: "btn btn-success" %>
 
             <% end %>
