Finally got public activity working

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Activities#index</h1>
-<% @activities.each |activity| %> 
-<%= activity.inspect %> 
+<% @activities.each do |activity| %> 
+
+<%= activity.inspect %>
+
+</div>
+
 
 <% end %> 
