--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,14 +24,12 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @current_user.name %><b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Add a new Piece</a></li>
-            <li><a href="#"></a></li>
+            <li><%= link_to "Add a New Piece", new_user_version_path(current_user) %></li>
+            <li class="divider"></li>
             <li><%= link_to "View My Profile", user_path(current_user) %></li>
             <li><%= link_to "Edit My Profile", edit_user_path(current_user) %></li>
             <li class="divider"></li>
             <li><%= link_to "View My Friends", users_path %></li>
-            <li class="divider"></li>
-            
           </ul>
         </li>
         <% end %>
