--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,16 +21,19 @@
       </form> -->
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
+        <% if current_user.avatar_file_name %>
+          <li><%= image_tag current_user.avatar_url(:thumb) %></li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @current_user.name %><b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Add a new Piece</a></li>
-            <li><a href="#"></a></li>
+            <li><%= link_to "Add a new Piece", new_user_version_path(current_user) %></li>
+            <li class="divider"></li>
             <li><%= link_to "View My Profile", user_path(current_user) %></li>
             <li><%= link_to "Edit My Profile", edit_user_path(current_user) %></li>
             <li class="divider"></li>
             <li><%= link_to "View My Friends", users_path %></li>
-            <li class="divider"></li>
+            
             
           </ul>
         </li>
