--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,31 @@
-<h1>Your Friends</h1>
-
-<div id="search">
-    <%= render :partial => 'users/search' %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4" id="search">
+            <h2>Search for Your Friends</h2>
+            <%= render :partial => 'users/search' %>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
 </div>
 
-
-
-    <ul>
-        <% @users.each do |user| %>
-            <% if %>
-                <li><%= link_to user.name, :action => 'show', :id => user.id  %></li>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <% @users.each do |user| %>
+                <div class="row">
+                    <div class="col-md">
+                        <% if user.avatar_file_name %>
+                            <%= image_tag user.avatar_url(:thumb) %>
+                        <% end %>
+                    </div>
+                    <div class="col-md">
+                        <p><%= link_to user.name, :action => 'show', :id => user.id  %></p>
+                    </div>
+                </div>
             <% end %>
-        <% end %>
-    </ul>
-
-
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+</div>
