--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,47 @@
 <h1><%=@user.name %>'s Profile</h1>
-<div id="profile-photo">
-    <% if @user.avatar_file_name %>
-        <%= image_tag @user.avatar_url(:medium) %><br /><br />
+    <div id="profile-photo">
+        <% if @user.avatar_file_name %>
+            <%= image_tag @user.avatar_url(:medium) %><br /><br />
+        <% end %>
+    </div>
+    <p>Email: <%= @user.email %></p>
+    <br>
+    <% if @user == current_user %>
+        <%= link_to "Edit My Profile", edit_user_path(@user) %>
     <% end %>
-</div>
-Email: <%= @user.email %>
-<br>
-<% if @user == current_user %>
-<%= link_to "Edit My Profile", edit_user_path(@user) %>
-<% end %>
-<% if current_user != @user %>
-    <%= link_to "Add #{@user.name} as a Friend", user_friendships_path(:friend_id => @user), :method => :post %>
-<% end %>
-<br>
-<% if current_user == @user %>
-<%= link_to "Add A New Writing Project", new_user_version_path(@user) %>
-<% end %>
-<h2><%= @user.name %>'s Friends</h2>
-    <ul>
-    <% @user.user_friendships.each do |f| %>
-        <li>
-            <hr>
-            <% if f.friend.avatar_file_name %>
-                <%= image_tag f.friend.avatar_url(:thumb) %>
-            <% end %>
-            <%= link_to f.friend.name.titleize, user_path(f.friend_id) %> (<%= link_to "remove friend", user_friendship_path(f), :method => :delete %>)
-        </li>
+    <% if current_user != @user %>
+        <%= link_to "Add #{@user.name} as a Friend", user_friendships_path(:friend_id => @user), :method => :post %>
     <% end %>
-    </ul>
-
-<h2>Users That Have Friended <%= @user.name %></h2>
-
-    <ul>
-        <% @user.inverse_friends.each do |f| %>
+    <br>
+    <% if current_user == @user %>
+        <%= link_to "Add A New Writing Project", new_user_version_path(@user) %>
+    <% end %>
+    <h2><%= @user.name %>'s Friends</h2>
+        <ul>
+        <% @user.user_friendships.each do |f| %>
             <li>
                 <hr>
-                <% if f.avatar_file_name %>
-                    <%= image_tag f.avatar_url(:thumb) %>
+                <% if f.friend.avatar_file_name %>
+                    <%= image_tag f.friend.avatar_url(:thumb) %>
                 <% end %>
-                <%= link_to f.name.titleize, user_path(f)%>
+                <%= link_to f.friend.name.titleize, user_path(f.friend_id) %> (<%= link_to "remove friend", user_friendship_path(f), :method => :delete %>)
             </li>
         <% end %>
-    </ul>
+        </ul>
 
+    <h2>Users That Have Friended <%= @user.name %></h2>
 
-  
+        <ul>
+            <% @user.inverse_friends.each do |f| %>
+                <li>
+                    <hr>
+                    <% if f.avatar_file_name %>
+                        <%= image_tag f.avatar_url(:thumb) %>
+                    <% end %>
+                    <%= link_to f.name.titleize, user_path(f)%>
+                </li>
+            <% end %>
+        </ul>
+
 
 
