--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
         <% if current_user.avatar_file_name %>
-          <li><%= image_tag current_user.avatar_url(:thumb) %></li>
+          <li><%= link_to image_tag(current_user.avatar_url(:thumb)), user_path(current_user), style: "padding: 0" %></li>
         <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @current_user.name %><b class="caret"></b></a>
