--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,18 +13,17 @@
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4">
-            <% @users.each do |user| %>
-                <div class="row">
-                    <div class="col-md">
+            <ul>
+                <% @users.each do |user| %>
+                    <li>
+                    <hr> <!-- creates the line break for the users to be seperated -->
                         <% if user.avatar_file_name %>
-                            <%= image_tag user.avatar_url(:thumb) %>
+                            <%= link_to image_tag(user.avatar_url(:thumb)), user_path(user), style: "padding: 0" %>
                         <% end %>
-                    </div>
-                    <div class="col-md">
-                        <p><%= link_to user.name, :action => 'show', :id => user.id  %></p>
-                    </div>
-                </div>
-            <% end %>
+                        <%= link_to user.name, :action => 'show', :id => user.id  %>
+                     </li>
+                <% end %>
+            </ul>
         </div>
         <div class="col-md-4"></div>
     </div>
