--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,7 +37,7 @@
         </li>
         <% end %>
         <% if !current_user %>
-          <li><%= link_to "Sign In", new_session_path %>"></li>
+          <li><%= link_to "Sign In", new_session_path %></li>
           <li><%= link_to "Sign Up", new_user_path %></li>
         <% else %>
           <li><%= link_to "Log Out", new_session_path, :method => :delete %></li>
