added jquery to the new version piece page :D

--- a/app/views/versions/new.html.erb
+++ b/app/views/versions/new.html.erb
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
+
+
+</head>
+<body>
+
+
+
+
 <div class="container">
     <div class="row">
         <div class="col-md-3"></div>
@@ -7,6 +21,11 @@
         <div class="col-md-3"></div>
     </div>
 
+<div class = "create">
+<a href="#" class="btn btn-info btn-large"><i class="icon-pencil icon-white"></i> Create</a>
+</div>
+
+    <div class = "upload">
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6 well">
@@ -19,7 +38,15 @@
         </div>
         <div class="col-md-3"></div>
     </div>
+</div>
 
+
+<div class = "editbutton">
+<a href="#" class="btn btn-info btn-large"><i class="icon-pencil icon-white"></i> Use editor instead</a>
+</div>
+
+
+   <div class = "editor">
     <div class="row">
         <div class="col-md"></div>
         <div class="col-md-12 well">
@@ -40,3 +67,36 @@
         <div class="col-md"></div>
     </div>
 </div>
+</div> 
+
+
+<script type="text/javascript">
+
+$(document).ready(function() {
+
+ $('.editor').hide(); //Initially form wil be hidden.
+ $(".editbutton").click(function(){
+    $(".editor").fadeIn("slow");
+ }),
+
+ $('.upload').hide(); //Initially form wil be hidden.
+ $(".create").click(function(){
+    $(".upload").show();
+ })
+  
+  
+
+   });
+
+
+    
+
+
+
+</script>
+
+
+
+</body>
+</html>
+
