--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Activities#index</h1>
 <% @activities.each do |activity| %> 
 
-<div class = "actvitiy">
+<div class = "activity">
 
-<%link_to activity.owner.name activity.owner if activity.owner %> 
+<%link_to activity.owner.name, activity.owner if activity.owner %> 
 
-<%= render_activity activity %> 
+<%= render "activity" %>
 
 
 </div>
