gets things going a bit more with links and styling on the user show page. Fixes a problem in the verions_controller.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4"></div>
-        <div class="col-md-4" id="search">
-            <h2>Search for Your Friends</h2>
+        <div class="col-md-6" id="search">
+            <h2>Search WriterShare for Your Friends</h2>
             <%= render :partial => 'users/search' %>
         </div>
-        <div class="col-md-4"></div>
+        <div class="col-md-2"></div>
     </div>
 </div>
 
