--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,15 +2,8 @@
     <div class="col-md-4"></div>
     <div class="well col-md-4">
         <h1>Create a New User Account </h1>
-            <%= bootstrap_form_for(@user) do |f| %>
-                <%= f.text_field :name, class: "form-control" %>
-                <%= f.email_field :email, class: "form-control" %>
-                <%= f.password_field :password, class: "form-control" %>
-                <%= f.password_field :password_confirmation, class: "form-control" %>
-                <span class="title">Avatar: </span><%= f.file_field :avatar %>
-                <%= f.submit "Submit", class: "btn btn-default" %>
-
-            <% end %>
+        <%= render partial: 'users/form' %>
     </div>
     <div class="col-md-4"></div>
 </div>
+
