--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,17 +22,17 @@
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
         <% if current_user.avatar_file_name %>
-          <li><%= link_to image_tag(current_user.avatar_url(:thumb)), user_path(current_user), style: "padding: 0" %></li>
+          <li><%= link_to image_tag(current_user.avatar_url(:thumb)), user_path(current_user), style: "padding: 2px 0 0 0" %></li>
         <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @current_user.name %><b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Add a New Piece", new_user_version_path(current_user) %></li>
+              <li><%= link_to "Add a New Piece", new_user_version_path(current_user) %></li>
             <li class="divider"></li>
-            <li><%= link_to "View My Profile", user_path(current_user) %></li>
-            <li><%= link_to "Edit My Profile", edit_user_path(current_user) %></li>
+              <li><%= link_to "View My Profile", user_path(current_user) %></li>
+              <li><%= link_to "Edit My Profile", edit_user_path(current_user) %></li>
             <li class="divider"></li>
-            <li><%= link_to "View My Friends", users_path %></li>
+              <li><%= link_to "Search for My Friends", users_path %></li>
           </ul>
         </li>
         <% end %>
