--- a/app/views/versions/new.html.erb
+++ b/app/views/versions/new.html.erb
@@ -35,6 +35,7 @@
                     <div class="text-editor">
                         <textarea id="elm1" name="area"></textarea>
                     </div>
+                    <%= v.text_area :body, class: "text-editor", id: "elm1", name: "area" %>
                     <%= v.submit "Submit", class: "btn btn-success" %>
                 <% end %>
         </div>
