fix some more jquery things

--- a/app/views/versions/new.html.erb
+++ b/app/views/versions/new.html.erb
@@ -111,12 +111,12 @@ $(document).ready(function() {
  })
 
 $(".create").click(function() {
-    $(".upload").toggle();
+    $(".upload").slideToggle(400);
 })
 
 
 $(".editbutton").click(function() {
-    $(".editor").toggle();
+    $(".editor").slideToggle(400);
 });
 
 
