eleminates TinyMCE. Creates a file for the script incase we want it back.

--- a/app/views/versions/index.html.erb
+++ b/app/views/versions/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Versions Index</h1>
 
+<% @versions.each do |v| %>
+    <div>
+        <%= v.title %>
+        <%= v.body %>
+        <hr>
+    </div>
+<% end %>
+
+
