--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,6 +27,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @current_user.name %><b class="caret"></b></a>
           <ul class="dropdown-menu">
+              <li><%= link_to "See My Writing Pieces", user_versions_path(current_user) %></li>
               <li><%= link_to "Add a New Piece", new_user_version_path(current_user) %></li>
             <li class="divider"></li>
               <li><%= link_to "View My Profile", user_path(current_user) %></li>
