--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,15 +10,15 @@
             </div>
             <p>Email: <%= @user.email %></p>
             <% if current_user == @user %>
-                <%= link_to "Edit My Profile", edit_user_path(@user), class: "btn btn-info" %>
+                <%= link_to "Edit My Profile", edit_user_path(@user), class: "btn btn-info btn-block" %>
             <% end %>
             <% if current_user != @user %>
-                <%= link_to "Add #{@user.name} as a Friend", user_friendships_path(:friend_id => @user), :method => :post, class: "btn btn-success" %>
+                <%= link_to "Add #{@user.name} as a Friend", user_friendships_path(:friend_id => @user), :method => :post, class: "btn btn-success btn-block" %>
             <% end %>
             <% if current_user == @user %>
-                <%= link_to "Add A New Writing Project", new_user_version_path(@user), class: "btn btn-success" %>
+                <%= link_to "Add A New Writing Project", new_user_version_path(@user), class: "btn btn-success btn-block" %>
             <% end %>
-                <%= link_to "See My Writing Projects", user_versions_path(@user), class: "btn btn-info" %>
+                <%= link_to "See My Writing Projects", user_versions_path(@user), class: "btn btn-info btn-block" %>
 
         </div>
         <div class="col-md-4">
