--- a/app/views/versions/new.html.erb
+++ b/app/views/versions/new.html.erb
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="col-md"></div>
         <div class="col-md-12 well">
-            <h3>Or Copy and Paste a File Into Here:</h3>
+            <h3><span id="page_name" data-mercury="full">Or Copy and Paste a File Into Here:</span></h3>
                 <%= bootstrap_form_for([@current_user, @version]) do |v| %>
                     <div class="row">
                         <div class="col-md-1"></div>
@@ -32,12 +32,14 @@
                         </div>
                         <div class="col-md-7"></div>
                     </div>
-                    <div class="text-editor">
-                        <textarea id="elm1" name="area"></textarea>
-                    </div>
-                    <%= v.text_area :body, class: "text-editor", id: "elm1", name: "area" %>
+                    
+                    
                     <%= v.submit "Submit", class: "btn btn-success" %>
                 <% end %>
+                <div style="background-color: white" id="page_content" data-mercury="full">
+                    <h1>add your content here</h1>
+                </div>
+                <p><%= link_to "Edit Page", "/editor" + request.path %></p>
         </div>
         <div class="col-md"></div>
     </div>
