--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,9 @@
                 <% @users.each do |user| %>
                     <li>
                     <hr> <!-- creates the line break for the users to be seperated -->
-                        <% if user.avatar_file_name %>
+                        
+                        <% if user.avatar_file_name %> <!--shows the user's avatar if present-->
+                            <!-- We need to move the below styling to a CSS file at some point -->
                             <%= link_to image_tag(user.avatar_url(:thumb)), user_path(user), style: "padding: 0" %>
                         <% end %>
                         <%= link_to user.name, :action => 'show', :id => user.id  %>
